[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/theme.tres" type="Theme" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashCostume" type="Button" parent="."]
margin_left = 23.0
margin_top = 15.0
margin_right = 170.0
margin_bottom = 60.0
text = "Flash Drive"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BirdCostume" type="Button" parent="."]
margin_left = 23.0
margin_top = 65.0
margin_right = 170.0
margin_bottom = 110.0
text = "Bird"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagiCostume" type="Button" parent="."]
margin_left = 23.0
margin_top = 115.0
margin_right = 170.0
margin_bottom = 160.0
text = "Magic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MegaCostume" type="Button" parent="."]
margin_left = 23.0
margin_top = 165.0
margin_right = 170.0
margin_bottom = 210.0
text = "Mega"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoneCostume" type="Button" parent="."]
margin_left = 23.0
margin_top = 216.0
margin_right = 170.0
margin_bottom = 261.0
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}
